<resources>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_home">Quotes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">It\'s not about perfect. It\'s about effort. And when you bring that effort every single day, that\'s where transformation happens. That\'s how change occurs.</string>
    <string name="font_bold">bold</string>
    <string name="font_semibold">semibold</string>
    <string name="font_light">light</string>
    <string name="font_regular">regular</string>
    <string name="font_italic">italic</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="text_copied">Text Coppied</string>
    <string name="saved_as_image">Saved as Image in Gallery</string>
    <string name="share_using">Share</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="textSize">TextSize</string>
    <string name="typeFace">TypeFace</string>
    <string name="textColor">TextColor</string>
    <string name="backGround">Background</string>
    <string name="color_choose">Choose Color</string>
    <string name="app_name">Quotes</string>
    <string name="ad_unit_id">ca-app-pub-2695810809417290/2188075686</string>
    <string name="ad_mob_id">ca-app-pub-2695810809417290~9481332686</string>
    <string name="permission_required">Need permission to store the file</string>
</resources>
